# rbac_providers_auth_manager

./: .editorconfig  .gitignore  .gitleaks.toml  CANDIDATE6_PLUGIN_CI_FIX_REPORT.md  CI_README.md  LICENSE  NOTICE  README.md  REUSE.toml  __init__.py  auth_manager.py  config.py  mypy.ini  pyproject.toml  pytest.ini  requirements-airflow-integration.txt  requirements-dev.txt  requirements-fab-provider-validation.txt  setup.py
api/: __init__.py  models.py  routes.py  routes_api.py
authorization/: __init__.py  compat_matrix.py  helpers.py  policy_models.py  rbac.py  resource_contracts.py  resource_filters.py  vocabulary.py
ci/: CI_OWNERSHIP.json  CI_REFERENCE.json  CI_REFERENCE.md  CI_WORKFLOW_INPUTS.json  CI_WORKFLOW_INPUTS.md
ci_review/: artifact_inventory.txt  results.json  summary.md
compatibility/: __init__.py  airflow_public_api.py  fab_adapter.py  fab_provider_support.py  internal_shims.py
config_runtime/: __init__.py  advisories.py  advisory_rules.py  facade.py  mapping_parsers.py  models.py  parse_helpers.py  parser.py  permissions.ini  provider_parsers.py  section_parsers.py
core/: __init__.py  exceptions.py  logging_utils.py  session_guards.py  util.py
docs/: CI_OVERVIEW.md
entrypoints/: __init__.py  auth_manager.py
identity/: __init__.py  entra_mapper.py  ldap_mapper.py  mapper.py  models.py  requirements-airflow-integration.txt
providers/: __init__.py  base.py  entra_client.py  entra_http_service.py  entra_identity_service.py  entra_provider.py  ldap_client.py  ldap_connection_service.py  ldap_identity_service.py  ldap_provider.py
(+212 files in other folders)
