[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbac-providers-auth-manager"
version = "0.86.0"
description = "Custom Airflow auth manager provider for LDAP and Microsoft Entra ID"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OpenAI CI modernization output" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.setuptools]
include-package-data = true

[tool.bandit]
exclude_dirs = ["tests", "scripts", ".ci-artifacts", "ci_review"]
severity = ["LOW", "MEDIUM", "HIGH"]
skips = []
